# kaggle

./: .gitignore  README.md  pyrightconfig.json
.claude/: settings.json
.claude/skills/read-kaggle/: SKILL.md  fetch.sh  render.py
competition/pokemon-card/: README.md  pyproject.toml
competition/pokemon-card/docs/: input-data-fetch.md  overview.md  simulation.md
competition/pokemon-card/src/my-practice/start-competition/: main.py
competition/pokemon-card/src/samples/rl_mcts/: README.md  kernel-metadata.json
competition/pokemon-card/src/samples/rule_based_lucario/: README.md  a-sample-rule-based-agent-mega-lucario-ex-deck.ipynb  kernel-metadata.json  main.py
