[project]
name = "pokemon-card"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "kaggle-environments>=1.30.1",
]

[dependency-groups]
dev = [
    "kaggle>=2.2.2",
    "mypy>=2.1.0",
    "ruff>=0.15.18",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = true

# cg（cabt エンジン）は input/sample_submission/cg にあり実行時のみ存在するため型チェック対象外
[[tool.mypy.overrides]]
module = "cg.*"
ignore_missing_imports = true

[tool.pyright]
# Pylance に cg（input/sample_submission/cg）の場所を教える
extraPaths = ["input/sample_submission"]
